Cleanups + updates from evolutility.org.

--- a/Evolutility_Web/EvoDico/zmEvoDico.master
+++ b/Evolutility_Web/EvoDico/zmEvoDico.master
@@ -34,7 +34,8 @@
 </tr>
 <tr><td colspan="4" align="center">
 <br class="clear" />
-<div class="footer"><a href="../company.aspx">About Us</a> | <a href="../contact.aspx">Contact Us</a> | &#169; 2011 Olivier Giulieri
+<div class="footer">
+ &#169; 2011 Olivier Giulieri
 <br />&nbsp;</div>
 </td></tr>
 </table>
